Configuraciones/Istio/heroes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heroes-v1
  labels:
    app: heroes
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heroes
      version: v1
  template:
    metadata:
      labels:
        app: heroes
        version: v1
    spec:
      serviceAccountName: heroes
      containers:
      - name: heroes
        image: www.gz.com:5000/hello-jib:0.0.1-SNAPSHOT
        imagePullPolicy: Always        
        ports:
        - name: http  
          containerPort: 8082
      imagePullSecrets:
      - name: milocalregistry  
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heroes-v2
  labels:
    app: heroes
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heroes
      version: v2
  template:
    metadata:
      labels:
        app: heroes
        version: v2
    spec:
      serviceAccountName: heroes
      containers:
      - name: heroes
        image: www.gz.com:5000/hello-jib:0.0.2-SNAPSHOT
        imagePullPolicy: Always        
        ports:
        - name: http  
          containerPort: 8082
      imagePullSecrets:
      - name: milocalregistry          
---
apiVersion: v1
kind: Service
metadata:
  name: heroes-svc
  annotations:
  labels:
    app: heroes
spec:
  type: ClusterIP
  selector:
    app: heroes
  ports:
  - name: http              
    port: 80                
    targetPort: http
