Configuraciones/Istio/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: heroes-svc-dr
spec:
  host: heroes-svc
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 1
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
    outlierDetection:
      consecutiveErrors: 3
      interval: 5s
      baseEjectionTime: 20s
      maxEjectionPercent: 100
    loadBalancer:
      simple: RANDOM
  subsets:
  - name: grupo1
    labels:
      version: v1
  - name: grupo2
    labels:
      version: v2
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
